# Claude-Cortex

./: .gitignore  .pre-commit-config.yaml  AGENT-LOOPS.md  AGENTS.md  CONTRIBUTING.md  CREDITS.md  FEATURE_PROPOSALS.md  MANIFEST.in  README.md  cortex-config.json  justfile  mypy.ini  package.json  plan.md  pyproject.toml  pytest.ini
.beads/export-state/: 4d6f168dcbd951c5.json
.beads/reviews/: claude-multi-specialist-review.md  review-20260209-135121.md  test-audit-20260209-023207.md  test-audit-20260209-023207.prompt.md  test-audit-20260209-023836.md  test-audit-20260209-023836.prompt.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: a11y-advisor.md  arch-advisor.md  codebase-scout.md  debug-assist.md  diagram-generator.md  frontend-design-advisor.md  guide-writer.md  pattern-advisor.md  perf-advisor.md  security-advisor.md  standards-oracle.md  ux-advisor.md
.github/ISSUE_TEMPLATE/: test_coverage.md
.github/workflows/: agent-index.yml  pages.yml  semantic-release.yml  skill-index.yml  test.yml  type-check.yml
agents/: agent-index.json  architect-review.md  cloud-architect.md  code-reviewer.md  compliance-auditor.md  component-architect.md  context-manager.md  database-admin.md  database-optimizer.md  debugger.md  dependencies.map  docs-architect.md  frontend-optimizer.md  interaction-designer.md  javascript-pro.md  jwt-expert.md  knowledge-synthesizer.md  kubernetes-architect.md  memory-keeper.md  orchestrator.md  owasp-top10-expert.md  performance-engineer.md  performance-monitor.md  postgres-expert.md  product-strategist.md  python-pro.md  react-specialist.md  refiner.md  rest-expert.md  rust-pro.md  search-specialist.md  security-auditor.md  sql-pro.md  state-architect.md  tailwind-expert.md  technical-writer.md  test-automator.md  triggers.yaml  tutorial-engineer.md  typescript-pro.md  (+4 more)
archive/agents/: learning-guide.md  master-orchestrator.md  mermaid-expert.md  multi-agent-coordinator.md  penetration-tester.md  product-strategist.md  prompt-engineer.md  reference-builder.md
backlog/: config.yml
backlog/docs/: doc-1 - Skill-Registry-Consolidation-Plan.md  doc-2 - Homebrew-Tap-for-Cortex-—-Scope.md
backlog/tasks/: task-1 - Site-tutorial-track.md  task-1.1 - Tutorial-skills-to-context-handoff.md  task-1.2 - Tutorial-export-context-for-sub-agents-and-external-LLMs.md  task-1.3 - Tutorial-first-20-minutes-in-the-TUI.md  task-1.4 - Tutorial-feature-workflow-in-Cortex.md  task-1.5 - Tutorial-bug-fix-workflow-in-Cortex.md  task-1.6 - Tutorial-watch-mode-setup-and-use.md  task-1.7 - Tutorial-multi-LLM-consultation-workflow.md  task-1.8 - Tutorial-review-prep-with-cortex-review.md  task-10 - Phase-4-CI-and-pre-commit-gate-for-skill-index-drift.md  task-11 - Phase-5-Delete-legacy-registry-files.md  task-12 - Phase-6-Gap-fill-keywords-for-unregistered-skills.md  task-13 - Fix-flaky-test_specialist_review_falls_back_to_gemini_when_claude_fails.md  task-14 - Rename-specialist-review.sh-to-cross-model-review.sh-for-clarity.md  task-2 - cortex-run-agent-launcher-wrapping-claude-agent.md  task-3 - cortex-dispatch-headless-task-runner-via-claude-p.md  task-4 - cortex-review-standalone-code-review-wrapping-agent-loops-reviewer.md  task-5 - cortex-consult-multi-LLM-fan-out-for-second-opinions.md  task-6 - Add-failure-path-coverage-for-agent-loops-review-providers.md  task-7 - Phase-1-Add-skill-index-schema-and-rebuild-index-command.md  task-8 - Phase-2-Migrate-keywords-into-SKILL.md-front-matter.md  task-9 - Phase-3-Rewrite-consumers-to-read-skill-index.json.md
claude_ctx_py/: activator.py  agent_index.py  cli.py  cmd_ai.py  cmd_dashboard.py  cmd_git.py  cmd_onboard.py  cmd_review.py  cmd_suggest.py  cmd_tmux.py  completions.py  init_cmds.py  installer.py  launcher.py  metrics.py  review_parser.py  setup.py  shell_integration.py  skill_index.py  skill_recommender.py  slash_commands.py  statusline.py  tui_command_palette.py  tui_commands.py  tui_dashboard.py  tui_dialogs.py  tui_memory.py  tui_navigation_providers.py  tui_overview_enhanced.py  watch.py  wizard.py
claude_ctx_py/commands/: dev_manpages.py  dev_validate_manpages.py  uninstall.py
claude_ctx_py/core/: __init__.py  agents.py  asset_discovery.py  asset_installer.py  base.py  codex_skills.py  context_export.py  doctor.py  hooks.py  mcp.py  rag.py  rules.py  skills.py  worktrees.py
claude_ctx_py/git/: __init__.py  branch.py  commit.py  patch.py  push.py  run.py  stash.py  validate.py  worktree.py
claude_ctx_py/hooks/: __init__.py  (+5 more)
docs/: AI_INTELLIGENCE.md  NAVIGATOR.md  README.md  WHATS_NEW.md  _config.yml  index.md  settings-files.md
flags/: mcp-servers.md
hooks/: README.md  audit.sh  auto-reviewer.sh  changelog_gate.py  context_pack_injector.py  execution-enforcer.sh  hooks.json  issue-generator.sh  large_file_gate.py  memory_auto_capture.py  parallel-workflow-enforcer.sh  post-edit-check.sh  review-gate.sh  safety_pre_tool_guard.py  secret_scan.py  skill_auto_suggester.py  subagent_output_validator.py  workspace_validator.py
mcp/: backlog.md  codanna.md
rules/: codanna.md  documentation.md  execution-law.md  files.md  git-rules.md  specialist-consultation.md  tools.md  workflow-rules.md
schemas/: agent-index.schema.json  agent-schema-v2.yaml  cortex-config.schema.json  hooks.schema.json  memory-config.schema.json  onboarding-state.schema.json  recommendation-rules.schema.json  skill-index.schema.json  skill-rules.schema.json  triggers.schema.json
scripts/: apply-delegate-when.py  apply-skill-keywords.py  migrate-skill-keywords.py  post-install.sh  salvage-triggers-yaml.py  strip-agent-fiction-fields.py  sync_bundled_assets.py  uninstall.sh
site/: _config.yml  index.md
skills/: .system  activation.schema.json  activation.yaml  authors.schema.json  authors.yaml  composition.schema.json  composition.yaml  dependencies.map  recommendation-rules.json  registry.yaml  skill-index.json  skill-rules.json  versions.schema.json
templates/: mcp.json  memory-config.json  settings.json
tests/: README.md  __init__.py  conftest.py
workflows/: onboarding-education.yaml
(+672 files in other folders)
