[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cortex"
version = "1.2.0"
description = "Context orchestration CLI with curated agents, rules, skills, and management tools for Claude Code"
authors = [{name = "Nicholas Ferguson", email = "ncf423@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argcomplete>=3.2",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "PyYAML>=6.0.0",
    "psutil>=5.9.0",
    "jsonplate>=0.0.1",
    "jsonschema>=4.25.1",
]

[project.optional-dependencies]
# AI Intelligence features
ai = [
    "fastembed>=0.7.4",  # Semantic similarity matching
    "numpy>=1.24.0",     # Required by fastembed
]
llm = [
    "anthropic>=0.18.0",  # Optional LLM-powered recommendations
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-psutil>=5.9.0",
    "black>=23.0.0",
    "PyYAML>=6.0.0",
    "build>=1.0.0",
    "python-semantic-release>=9.0.0",
]
# All optional features
all = [
    "fastembed>=0.7.4",
    "numpy>=1.24.0",
    "anthropic>=0.18.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/NickCrew/claude-cortex"

[project.scripts]
cortex = "claude_ctx_py.cli:main"
cortex-ui = "claude_ctx_py.tui.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_ctx_py*"]

[tool.setuptools.data-files]
# Regenerate with: cortex dev manpages
# Validate with:   cortex dev validate-manpages
"share/man/man1" = [
    "docs/reference/cortex.1",
    "docs/reference/cortex-agent.1",
    "docs/reference/cortex-ai.1",
    "docs/reference/cortex-dev.1",
    "docs/reference/cortex-docs.1",
    "docs/reference/cortex-export.1",
    "docs/reference/cortex-file.1",
    "docs/reference/cortex-git.1",
    "docs/reference/cortex-hooks.1",
    "docs/reference/cortex-install.1",
    "docs/reference/cortex-mcp.1",
    "docs/reference/cortex-memory.1",
    "docs/reference/cortex-plan.1",
    "docs/reference/cortex-review.1",
    "docs/reference/cortex-rules.1",
    "docs/reference/cortex-skills.1",
    "docs/reference/cortex-status.1",
    "docs/reference/cortex-statusline.1",
    "docs/reference/cortex-tmux.1",
    "docs/reference/cortex-tui.1",
    "docs/reference/cortex-uninstall.1",
    "docs/reference/cortex-worktree.1",
]
# Root-level docs
"share/claude-cortex/docs" = [
    "docs/index.md",
    "docs/README.md",
    "docs/NAVIGATOR.md",
    "docs/AI_INTELLIGENCE.md",
    "docs/settings-files.md",
    "CHANGELOG.md",
    "CREDITS.md",
    "LICENSE",
]
# User guides
"share/claude-cortex/docs/guides" = [
    "docs/guides/getting-started.md",
    "docs/guides/commands.md",
    "docs/guides/skills.md",
    "docs/guides/hooks.md",
    "docs/guides/memory.md",
    "docs/guides/worktrees.md",
    "docs/guides/asset-manager.md",
    "docs/guides/dependencies.md",
    "docs/guides/integrations.md",
    "docs/guides/prompt-library.md",
    "docs/guides/COMPLETIONS.md",
    "docs/guides/DOCUMENTATION_VIEWER.md",
    "docs/guides/tui.md",
    "docs/guides/tui-quick-start.md",
    "docs/guides/tui-integration.md",
    "docs/guides/skills-tui-integration.md",
]
"share/claude-cortex/docs/guides/tui" = [
    "docs/guides/tui/copy-definition-feature.md",
    "docs/guides/tui/tui-keyboard-reference.md",
    "docs/guides/tui/tui-mcp-view.md",
    "docs/guides/tui/tui-navigation-summary.md",
]
"share/claude-cortex/docs/guides/ai" = [
    "docs/guides/ai/README.md",
    "docs/guides/ai/LLM_INTELLIGENCE_GUIDE.md",
    "docs/guides/ai/LLM_QUICK_REFERENCE.md",
]
"share/claude-cortex/docs/guides/mcp" = [
    "docs/guides/mcp/MCP_MANAGEMENT.md",
    "docs/guides/mcp/MCP_MODULE_README.md",
    "docs/guides/mcp/MCP_MODULE_USAGE.md",
]
# Tutorials
"share/claude-cortex/docs/tutorials" = [
    "docs/tutorials/index.md",
    "docs/tutorials/getting-started-tui.md",
    "docs/tutorials/ai-watch-mode.md",
    "docs/tutorials/ci-cd-integration.md",
    "docs/tutorials/skill-authoring-cookbook.md",
]
"share/claude-cortex/docs/tutorials/learning-paths" = [
    "docs/tutorials/learning-paths/index.md",
    "docs/tutorials/learning-paths/onboarding.md",
]
# Reference
"share/claude-cortex/docs/reference" = [
    "docs/reference/index.md",
    "docs/reference/README.md",
    "docs/reference/configuration.md",
    "docs/reference/bin-utilities.md",
    "docs/reference/scripts-utilities.md",
    "docs/reference/skill-showcase.md",
]
"share/claude-cortex/docs/reference/api" = [
    "docs/reference/api/index.md",
    "docs/reference/api/installer.md",
]
"share/claude-cortex/docs/reference/architecture" = [
    "docs/reference/architecture/architecture-diagrams.md",
    "docs/reference/architecture/DIAGRAMS_README.md",
    "docs/reference/architecture/README.md",
    "docs/reference/architecture/terminology.md",
]
# Architecture
"share/claude-cortex/docs/architecture" = [
    "docs/architecture/README.md",
    "docs/architecture/MASTER_ARCHITECTURE.md",
    "docs/architecture/DIAGRAMS_README.md",
    "docs/architecture/quick-reference.md",
    "docs/architecture/skill-recommendation-engine.md",
]


[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_ctx_py.activator"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "claude_ctx_py.composer"
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=claude_ctx_py",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for CLI and workflows",
    "slow: Tests that take longer to run",
    "fast: Tests that run quickly (< 1 second)",
    "tui: Tests for TUI components",
    "cli: Tests for CLI interface",
    "core: Tests for core functionality",
    "intelligence: Tests for AI/intelligence features",
    "smoke: Smoke tests for critical paths",
    "regression: Regression tests for bug fixes",
    "requires_yaml: Tests that require PyYAML to be installed",
]

[tool.coverage.run]
source = ["claude_ctx_py"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Progressive coverage target (current: 15%, target: 80%)
# Phase 1: 15% (Week 1) - Baseline + buffer
# Phase 2: 30% (Week 2) - Core modules
# Phase 3: 50% (Week 3) - Major features
# Phase 4: 65% (Week 4) - Comprehensive
# Phase 5: 80% (Future) - Target coverage
fail_under = 15
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | htmlcov
)/
'''

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
build_command = "python -m build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_pypi = true
upload_to_repository = true
remove_dist = false
patch_without_tag = false
major_on_zero = true
allow_zero_version = true
commit_parser = "angular"
logging_use_named_masks = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
